# asistente_diagnostico_preventivo

./: asistente_diagnostico_preventivo.py  comandos.md  proxectos.md  pyproject.toml  resultado_asistente_diagnostico_preventivo1.md  schemas.py
